2006-11-24  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Filters/Rules/*/_MatchesFilter.py: Fix typo in description

2006-11-23  Alex Roitman  <shura@gramps-project.org>
	* test/GrampsDb/GrampsDbBase_Test.py (test_reindex_reference_map):
	Properly define lambda to fake the _update_reference_map method.
	* test/GrampsDb/GrampsDbTestBase.py (tearDown): Close database at
	the end of test.

2006-11-23  Don Allingham  <don@gramps-project.org>
	* src/docgen/Makefile.am: don't install AbiWord, OpenOffice 1.X,
	and KWord formats, since they have been superceded by OpenDocument.

2006-11-22  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: remove unused button
	* help/C/figures/family.png: updated
	* help/C/figures/reorder.png: new image
	* help/C/gramps.xml: updates

2006-11-22  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/RelLib/_Person.py (set_birth_ref,set_death_ref): Dont fail if setting
 	to None (which is what Check.py does).
	* src/plugins/TestcaseGenerator.py: Make it work again + some enhancements
	* src/ReportBase/_ReportUtils: Factor out common code into
	get_birth_or_fallback() and get_death_or_fallback()
	* src/DataViews/_PedigreeView.py: Use get_birth/death_or_fallback()
	* src/DataViews/_RelationView.py: Use get_birth/death_or_fallback()
	* src/DisplayModels/_PeopleModel.py: Fix EventRoleType call


2006-11-21  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/DetDescendantReport.py: 0000558: Print only primary events
	* src/plugins/DetAncestralReport.py: 0000558: Print only primary events
	* src/plugins/GraphViz.py: 0000558: Print only primary events
	* src/plugins/FamilyGroup.py: 0000558: Print only primary events
	* src/plugins/IndivComplete.py: 0000558: Print only primary events
	* src/plugins/NarrativeWeb.py: 0000558: Print only primary events

2006-11-21  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: handle illegal fullname gedcoms produced by FTM